Готовая начальная версия для телефонов

--- a/index.html
+++ b/index.html
@@ -93,9 +93,52 @@
     </section>
     <section>
       <h3 class="accent-title title-decor">А можно в картинках?</h3>
-      
+      <ul class="gallery">
+        <li class="gallery__lot">
+          <img 
+            src="./images/sunset.png"
+            alt="Закат, солнце прячется за горы над рекой"
+            class="image"
+            loading="lazy"
+          />
+        </li>
+        <li class="gallery__lot">
+          <img 
+            src="./images/ice-cream.png"
+            alt="Тарелочка с вкусным мультяшным мороженым"
+            class="image"
+            loading="lazy"
+          />
+        </li>
+        <li class="gallery__lot">
+          <img 
+            src="./images/tape.png"
+            alt="Кассета, витающая в облаках интернета"
+            class="image"
+            loading="lazy"
+          />
+        </li>
+        <li class="gallery__lot">
+          <img 
+            src="./images/books.png"
+            alt="Стопка книг"
+            class="image"
+            loading="lazy"
+          />
+        </li>
+        <li class="gallery__lot">
+          <img 
+            src="./images/street.png"
+            alt="Улица в ретро-вейв стиле"
+            class="image"
+            loading="lazy"
+          />
+        </li>
+      </ul>
     </section>
-    <footer></footer>
+    <footer class="footer decorated-zone">
+      <h1 class="main-title">focus</h1>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
