--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </ul>
       </nav>
       <h3 class="header-accent-title title-decor">Что делать, когда не можешь делать ничего
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </h3>
     </header>
     <main class="main">
