--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h1 class="main-title">focus</h1>
+      <h1 class="footer-main-title">focus</h1>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
