--- a/index.html
+++ b/index.html
@@ -66,14 +66,18 @@
       <section class="section section-grid-center">
         <h2 class="section-title">Что снижает концентрацию внимания?
         </h2>
-        <ul>
+        <ul class="section-grid-center__list">
           <li>
             <h3 class="accent-title title-decor">Многозадачность</h3>
             <p class="section-text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
             </p>
+          </li>
+          <li>
             <h3 class="accent-title title-decor">Еда</h3>
             <p class="section-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
             </p>
+          </li>
+          <li>
             <h3 class="accent-title title-decor">Гаджеты</h3>
             <p class="section-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
@@ -105,7 +109,7 @@
           </ul>
       </section>
       <section class="section">
-        <h3 class="accent-title title-decor">А можно в картинках?</h3>
+        <h3 class="accent-title gallery-title title-decor">А можно в картинках?</h3>
         <ul class="gallery">
           <li class="gallery__lot">
             <img 
