Исправлены отступы и ошибки

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </li>
           </ul>
       </section>
-      <section class="section">
+      <section class="section gallery-section">
         <h3 class="accent-title gallery-title title-decor">А можно в картинках?</h3>
         <ul class="gallery">
           <li class="gallery__lot">
