--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css"> 
     <title>Сложно сосредоточиться</title>
+    <meta name="description" content="Страница о том, как сложно бывает сосредоточиться и как можно попробовать решить эту проблему">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="vhs" aria-hidden="true"></div>
+      <div class="recording-logo" aria-hidden="true"></div>
       <h1 class="main-title">no focus</h1>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
@@ -44,19 +48,21 @@
           </li>
         </ul>
       </nav>
-      <h3 class="header-accent-title title-decor">Что делать, когда не можешь делать ничего
+      <h2 class="header-accent-title title-decor">Что делать, когда не можешь делать ничего
         <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </h3>
+      </h2>
     </header>
     <main class="main">
       <section class="section section-grid">
         <h2 class="section-title">Почему сосредоточиться так сложно
         </h2>
-        <ul>
+        <ul class="section-list">
           <li>
             <h3 class="accent-title title-decor">Многозадачность</h3>
-            <p class="section-text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="#0">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+            <p class="section-text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
+          </li>
+          <li>
             <h3 class="accent-title title-decor">Дофамин</h3>
             <p class="section-text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
             </p>
@@ -87,26 +93,36 @@
       <section class="section section-grid">
         <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
-          <ul>
+        <div>
+          <h3 class="accent-title accent-title__first title-decor">5 простых (на самом деле не очень) советов</h3>
+          <ul class="section-list">
             <li>
-              <h3 class="accent-title title-decor">5 простых (на самом деле не очень) советов</h3>
-              <h3 class="accent-title title-decor">Представьте небо и облака</h3>
+              <h4 class="accent-title not-bold title-decor">Представьте небо и облака</h4>
               <p class="section-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
               </p>
-              <h3 class="accent-title title-decor">Включите музыку</h3>
+            </li>
+            <li>
+              <h4 class="accent-title not-bold title-decor">Включите музыку</h4>
               <p class="section-text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
               </p>
-              <h3 class="accent-title title-decor">Прогуляйтесь</h3>
-              <p class="section-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="#0">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+            </li>
+            <li>
+              <h4 class="accent-title not-bold title-decor">Прогуляйтесь</h4>
+              <p class="section-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
               </p>
-              <h3 class="accent-title title-decor">Хорошо ешьте</h3>
+            </li>
+            <li>
+              <h4 class="accent-title not-bold title-decor">Хорошо ешьте</h4>
               <p class="section-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
               </p>
-              <h3 class="accent-title title-decor">Читайте</h3>
+            </li>
+            <li>
+              <h4 class="accent-title not-bold title-decor">Читайте</h4>
               <p class="section-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
               </p>
             </li>
           </ul>
+        </div>
       </section>
       <section class="section gallery-section">
         <h3 class="accent-title gallery-title title-decor">А можно в картинках?</h3>
