--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
         <div>
-          <h3 class="accent-title accent-title__first title-decor">5 простых (на самом деле не очень) советов</h3>
+          <h3 class="accent-title accent-title__top title-decor">5 простых (на самом деле не очень) советов</h3>
           <ul class="section-list">
             <li>
               <h4 class="accent-title not-bold title-decor">Представьте небо и облака</h4>
